cp project/force-app/main/default/objects/Handover__c/Handover__c.object-meta.xml
<CustomObject>
    <description>Final Handover, Possession Certificates, Key Handover, and 12-Month DLP.</description>
    <label>Handover</label>
    <nameField>
        <displayFormat>HND-{0000}</displayFormat>
        <label>Handover Ref</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Handovers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>