cp project/force-app/main/default/objects/Handover__c/fields/Additional_Charges_Paid__c.field-meta.xml
<CustomField>
    <fullName>Additional_Charges_Paid__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Additional Charges Paid</label>
    <type>Checkbox</type>
</CustomField>