cp project/force-app/main/default/objects/Handover__c/fields/All_Receipts_Approved__c.field-meta.xml
<CustomField>
    <fullName>All_Receipts_Approved__c</fullName>
    <defaultValue>false</defaultValue>
    <label>All Receipts Approved</label>
    <type>Checkbox</type>
</CustomField>