cp project/force-app/main/default/objects/Handover__c/fields/Defect_Liability_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Defect_Liability_Start_Date__c</fullName>
    <label>Defect Liability Start Date</label>
    <type>Date</type>
</CustomField>