cp project/force-app/main/default/objects/Handover__c/fields/Final_Payment_Cleared__c.field-meta.xml
<CustomField>
    <fullName>Final_Payment_Cleared__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Final Payment Cleared</label>
    <type>Checkbox</type>
</CustomField>