cp project/force-app/main/default/objects/Handover__c/fields/Handover_Date__c.field-meta.xml
<CustomField>
    <fullName>Handover_Date__c</fullName>
    <label>Handover Date</label>
    <required>true</required>
    <type>Date</type>
</CustomField>