cp project/force-app/main/default/objects/Handover__c/fields/Handover_Ref__c.field-meta.xml
<CustomField>
    <fullName>Handover_Ref__c</fullName>
    <label>Handover Ref</label>
    <length>50</length>
    <type>Text</type>
</CustomField>