cp project/force-app/main/default/objects/Handover__c/fields/Key_Handover_Letter__c.field-meta.xml
<CustomField>
    <fullName>Key_Handover_Letter__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Key Handover Letter</label>
    <referenceTo>Document__c</referenceTo>
    <relationshipLabel>Key Handover Letters</relationshipLabel>
    <relationshipName>Key_Letters</relationshipName>
    <type>Lookup</type>
</CustomField>