cp project/force-app/main/default/objects/Handover__c/fields/Maintenance_Letter__c.field-meta.xml
<CustomField>
    <fullName>Maintenance_Letter__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Maintenance Letter</label>
    <referenceTo>Document__c</referenceTo>
    <relationshipLabel>Maintenance Letters</relationshipLabel>
    <relationshipName>Maintenance_Letters</relationshipName>
    <type>Lookup</type>
</CustomField>