cp project/force-app/main/default/objects/Handover__c/fields/Possession_Certificate__c.field-meta.xml
<CustomField>
    <fullName>Possession_Certificate__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Possession Certificate</label>
    <referenceTo>Document__c</referenceTo>
    <relationshipLabel>Possession Certificate Handovers</relationshipLabel>
    <relationshipName>Possession_Handovers</relationshipName>
    <type>Lookup</type>
</CustomField>