cp project/force-app/main/default/objects/Handover__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pending</fullName>
                <default>true</default>
                <label>Pending</label>
            </value>
            <value>
                <fullName>Ready</fullName>
            </value>
            <value>
                <fullName>Documents Generated</fullName>
            </value>
            <value>
                <fullName>Completed</fullName>
            </value>
            <value>
                <fullName>Not Ready</fullName>
                <isActive>false</isActive>
                <label>Not Ready</label>
            </value>
            <value>
                <fullName>Rejected</fullName>
                <isActive>false</isActive>
                <label>Rejected</label>
            </value>
            <value>
                <fullName>Scheduled</fullName>
                <isActive>false</isActive>
                <label>Scheduled</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>