cp project/force-app/main/default/objects/Handover__c/fields/Unit__c.field-meta.xml
<CustomField>
    <fullName>Unit__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Unit</label>
    <referenceTo>Unit__c</referenceTo>
    <relationshipLabel>Handovers</relationshipLabel>
    <relationshipName>Handovers</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>