cp project/force-app/main/default/objects/Handover__c/validationRules/Handover_Payment_Gate_Check.validationRule-meta.xml
<ValidationRule>
    <fullName>Handover_Payment_Gate_Check</fullName>
    <active>true</active>
    <description>Handover cannot be completed until Final Payment is cleared, all receipts are approved, and additional charges are paid.</description>
    <errorConditionFormula>AND(ISPICKVAL(Status__c, &quot;Completed&quot;), OR(NOT(Final_Payment_Cleared__c), NOT(All_Receipts_Approved__c), NOT(Additional_Charges_Paid__c)))</errorConditionFormula>
    <errorMessage>Handover cannot be completed until Final Payment is cleared, all receipts are approved, and additional charges are paid.</errorMessage>
</ValidationRule>