cp project/force-app/main/default/objects/Handover__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Booking__c</columns>
    <columns>Handover_Date__c</columns>
    <columns>Status__c</columns>
    <columns>Unit__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>